# dns-cache

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
dns_cache/: __init__.py  dns_cache.py  lru.py  models.py  store.py  validators.py
tests/: test_dns_cache.py  test_store.py
