[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dns-cache"
version = "0.2.0"
description = "DNS cache with TTL + LRU eviction (SortedList expiry index, no seq)"
authors = [{name = "You"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "sortedcontainers>=2.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
pythonpath = ["."]
